--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
+body {
+  font-family: 'Roboto','sans-serif';
+}
+
 .card_item {
     padding: 45px 5px 5px 5px;
     display: flex;
@@ -7,4 +13,12 @@
     border-radius: 12px;
     border: 2px solid rgba(29, 31, 33, 0.653);
     box-shadow: 2px;
+}
+
+h2 {
+   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+h5 {
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
